<resources>
    <string name="app_name">RESTfulDemo</string>
    <string name="view_a_text">A</string>
    <string name="view_b_text">B</string>
    <string name="type_b_content_desc">Type B image</string>

    <string name="start_time_textview_text">Start Time</string>
    <string name="end_time_textview_text">End Time</string>
    <string name="temperature_textview_text">Min Temperature</string>
    <string name="swipe_refresh_text">下拉刷新</string>
    <string name="temperature_with_unit">%s%s</string>

    <string name="welcome_back_greeting_text">歡迎回來</string>
</resources>
